oxiplate/tests/broken/extends/extends-extends.stderr
error: Only block statements are allowed here, along with comments and whitespace.
 --> tests/broken/extends/extends-extends.rs:4:68
  |
4 | #[oxiplate_inline = r#"{% extends "extends-wrapper.html.oxip" %}{% extends "extends-wrapper.html.oxip" %}"#]
  |                                                                    ^^^^^^^
